--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,9 @@ playground.xcworkspace
 
 Carthage/Build/
 
+.specstory/
+.logs/
+
 # fastlane
 #
 # It is recommended to not store the screenshots in the git repo.
